@@ -13,6 +13,7 @@
  * Implemented Add button per aggregate on slice page (#1042)
  * Added functionality for knowing what AMs the slice has resources at (#762)
  * Change WiMAX base URL (#1045)
+ * Made a few fixes to the slice page (#1047)
 
 == 2.15 ==
  * Display OpenID URL on profile page (#290)
